# object-attribute-relation-logic-vl

./: .gitignore  AAAI_SUBMISSION_PLAN.md  PAPER.md  README.md  STARVLA_COMPUTE_RUNBOOK.md  TRAINING_READINESS.md  pyproject.toml  requirements.txt
configs/: dataset_sources.yaml  external_benchmarks.yaml  web_queries.yaml  web_queries_wikimedia.yaml
data/: example_web_manifest.jsonl
integrations/starvla/: OARLVLAQwenPI.py  install_overlay.py  oarlvla_qwenpi_libero.yaml  run_oarlvla_libero_train.sh
scripts/: annotate_web_image.py  build_web_dataset.py  download_grid_assets.py  eval_vla.py  generate_dataset.py  generate_grid_dataset.py  inspect_web_dataset.py  make_paper_tables.py  overfit_tiny_batch.py  prepare_training_bundle.py  run_aaai_ablation_suite.py  run_benchmark.py  run_demo.py  run_stage_pipeline.py  suggest_queries.py  train_vla.py
src/oarlvla/: __init__.py  attributes.py  baselines.py  cli.py  evaluation.py  groups.py  instruction.py  interfaces.py  objects.py  parser.py  policy.py  reasoning.py  reward.py  (+5 more)
tests/: model_test_utils.py  test_attributes.py  test_dedup.py  test_evaluation.py  test_gridworld_dataset.py  test_groups.py  test_instruction_generation.py  test_local_directory_source.py  test_mixed_vla_dataset.py  test_model_forward.py  test_model_save_load.py  test_model_training_step.py  test_pseudo_labeler.py  test_quality_filter.py  test_query_config_loading.py  test_qwenvl_adapter_config.py  test_reasoning.py  test_relations.py  test_states.py  test_taxonomy.py  test_web_asset_cutout.py  test_web_manifest_schema.py  test_web_task_export.py
(+35 files in other folders)
